supported-grammar.txt
# program ::= {statement}

# statement ::= right identation size +

    # print
    “印出”（ expression | string ）+ nl

    # if/elif/else
    “如果” comparison：nl
    {statement}
    "但如" comparison：nl
    {statement}
    “否则”：nl
    {statement}

    # while
    “当” comparison：nl
    {statement}

    # assignment
    ident "=" expression + nl


# comparison ::= expression (("==" | "!=" | ">" | ">=" | "<" | "<=") expression)+

# expression ::= term {( "-" | "+" ) term}

# term ::= unary {( "/" | "*" ) unary}

# unary ::= ["+" | "-"] primary

# primary ::= number | ident

# nl ::= '\n'+
